feat: ProjectResponseDto 달성률 항목 추가